feat: added `target`, fixed `levitate`, fixed branches
- Feat: added `Target` slot to every elemental effect
- Fix: updated `Levitate` to work on entities
- Fix: updated branch `Ids` to properly track active branches to better guess when a spell has ended naturally